# Projet_IHR

./: .gitgnore  .gitignore  CMakeLists.txt  README.md
Rover/: BotBoarduino.docx  Feuillet d'accompagnement.docx
Rover/Senseurs/: LIDAR Lite - Ressources.txt  QME Specifications.txt  Sharp GP2Y0A21YK - code example.txt
Rover/Senseurs/MPU-9250/: MPU9250 Guide.txt
Rover/Softs/Rover_Demo1.1/: Rover_Demo1.1.ino
Rover/System Volume Information/: IndexerVolumeGuid
launch/: projet_IHR.service  projet_IHR_launch.sh
src/: body_move.cpp  body_pose.cpp  humain_pose.cpp  main.cpp  main.hpp  rover_control.cpp  rover_status.cpp
src/include/: main.hpp  utils.hpp
src/video_publisher/: CMakeLists.txt  package.xml
src/video_publisher/src/: video_pub_node.cpp
